app/assets/stylesheets/custom/navigation.css
.nav-link {
  @apply rounded px-3 py-4 text-slate-500 focus:text-indigo-600 md:inline-block block relative md:text-sm text-base font-medium hover:transition hover:duration-300 hover:ease-in-out hover:text-slate-700 dark:text-slate-200 dark:hover:text-slate-300 dark:focus:text-white;
}

.nav-link-active {
  @apply text-indigo-600 hover:text-indigo-600 relative hover:transition hover:duration-300 hover:ease-in-out dark:hover:text-indigo-400 dark:text-indigo-500;
}

.nav-link-destructive {
  @apply relative text-rose-600 focus:text-rose-600 hover:text-rose-500 dark:text-rose-600 dark:hover:text-rose-500 dark:focus:text-rose-500;
}

.nav-link:hover::after,
.nav-link-active::after {
  @apply content-[''] block h-[2px] w-full left-0 absolute -bottom-px transition duration-300 ease-in-out bg-indigo-600 hover:transition hover:duration-300 dark:bg-indigo-500;
}

.nav-link-destructive:hover::after {
  @apply content-[''] block h-[2px] w-full left-0 absolute -bottom-px transition duration-300 ease-in-out bg-rose-600 hover:transition hover:duration-300 dark:bg-rose-500;
}

/* Dark */
.nav-link-dark {
  @apply rounded text-slate-100 focus:text-white md:inline-block block relative md:text-sm text-base font-medium hover:transition hover:duration-300 hover:ease-in-out hover:text-slate-100  dark:text-slate-200 dark:hover:text-slate-100 hover:bg-slate-700 dark:hover:bg-slate-700 hover:rounded py-2 px-3;
}

.nav-link-dark.nav-link-active {
  @apply rounded py-2 px-3 bg-indigo-600 hover:bg-indigo-700 focus:ring-indigo-600/20 text-white;
}

.nav-link-dark.nav-link-active:after {
  @apply hidden;
}

.sidebar-link {
  @apply rounded-lg px-4 py-3 focus:text-indigo-600 text-base font-medium hover:transition hover:duration-300 hover:ease-in-out dark:focus:text-white flex gap-4 items-center;
}

.sidebar-link-active {
  @apply text-slate-900 dark:text-slate-200 bg-slate-200 dark:bg-slate-700/70;
}

.sidebar-link-inactive {
  @apply text-slate-700 dark:text-slate-300 hover:text-slate-900 dark:hover:text-slate-200 hover:bg-slate-200 dark:hover:bg-slate-700/70;
}

.tab-link {
  @apply rounded-lg px-2 flex flex-col items-center gap-1 text-xs font-medium hover:transition hover:duration-300 hover:ease-in-out dark:focus:text-white;
}

.tab-link-active {
  @apply text-indigo-600 dark:text-indigo-500;
}

.tab-link-inactive {
  @apply text-slate-700 dark:text-slate-300 hover:text-indigo-600 dark:hover:text-indigo-500;
}

.btn-tab {
  @apply rounded-lg py-2 px-4 flex items-center gap-3 text-sm hover:bg-slate-200 dark:hover:bg-slate-700/70;
}

.btn-tab-active {
  @apply text-slate-900 dark:text-slate-200 bg-slate-200 dark:bg-slate-700/70;
}

.tab-container {
  @apply flex items-center gap-1.5 bg-slate-50/85 dark:bg-slate-800/85 p-1.5 rounded-md mb-6 border dark:border-slate-700 overflow-x-auto whitespace-nowrap max-w-max mx-auto sticky top-4 backdrop-blur-sm z-50;
}

